@@ -242,7 +242,7 @@ class rcube_sieve_script
                         if ($test['test'] == 'string') {
                             array_push($exts, 'variables');
                         }
-                        
+
                         $tests[$i] .= ($test['not'] ? 'not ' : '');
                         $tests[$i] .= $test['test'];
 
@@ -851,6 +851,11 @@ class rcube_sieve_script
             $token     = !empty($tokens) ? array_shift($tokens) : $separator;
 
             switch ($token) {
+            case 'if':
+                // nested 'if' conditions, ignore the whole rule (#5540)
+                $this->_parse_actions($content, $position);
+                continue 2;
+
             case 'discard':
             case 'keep':
             case 'stop':
@@ -936,8 +941,9 @@ class rcube_sieve_script
                 break;
             }
 
-            if ($separator == $end)
+            if ($separator == $end) {
                 break;
+            }
         }
 
         return $result;
