@@ -1,3 +1,5 @@
+- Fix handling of scripts with nested rules (#5540)
+
 * version 8.8 [2016-11-27]
 -----------------------------------------------------------
 - Fix parsing of vacation date-time with non-default date_format (#5372)
